SEC-271: Impemented FilterSecurityInovation parser for 'authorization-http-url' tag